.kubernetes/catalog/overlays/perf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  template:
    spec:
      # Force onto dedicated node pool for performance testing
      nodeSelector:
        mosaic.axinom.com/workload_type: perf
      containers:
        - name: app
