.kubernetes/catalog/overlays/perf/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-app
spec:
  hostnames:
    - perf-navy-catalog.axtest.net
  parentRefs:
    - name: mosaic
      namespace: gateway
  rules:
    - backendRefs:
        - name: catalog
          port: 10300
      matches:
        - path:
            type: PathPrefix
            value: /
